# tflx

./: .gitignore  Makefile  README.md  cfmt.py
app/: hello_world_float_model_data.cc  hello_world_int8_model_data.cc  tfl_main.cc
common/: debounce.c  debounce.h  logging.c  logging.h  nanoprintf.h  rand.c  syscalls.c  utils.h
ext/: Makefile  xtools.cmake
ext/files/: arm-none-eabi-gcc.cmake
ext/files/tfl/: CMakeLists.txt
ext/patches/: 100-Makefile.patch  100-flatbuffers.patch  arm-none-eabi-gcc.cmake
mk/: common.mk  toolchain_arm_cm4.cmake
old/: build.sh  clobber.sh  generate.sh
soc/st/stm32f4/lib/: dma.h  i2s.c  pwm.c  pwm.h  rng.h  stm32f4_soc.h  usart.c
tools/: cfmt.py
